fix small form size issue on mobile

--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ body{
     margin: 0;
 }
 
+iframe {
+    width: 100%;
+    height: 100vh; /* Adjust height as needed */
+}
+
 .break{
     color: #fff1f1;
     font-size: calc(3vmin);
